libraries/antlr/LALGParser.py
# Generated from libraries/antlr/LALGParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class LALGParser ( Parser ):

    grammarFileName = "LALGParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "'procedure'", "'var'", "'int'", 
                     "'boolean'", "'begin'", "'end'", "'if'", "'then'", 
                     "'else'", "'while'", "'do'", "'read'", "'write'", "'true'", 
                     "'false'", "':='", "'+'", "'-'", "'*'", "'/'", "'div'", 
                     "'or'", "'and'", "'not'", "'='", "'<>'", "'<'", "'>'", 
                     "'<='", "'>='", "';'", "':'", "','", "'.'", "'('", 
                     "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "PROCEDURE", "VAR", "TYPE_INT", 
                      "TYPE_BOOL", "BEGIN", "END", "IF", "THEN", "ELSE", 
                      "WHILE", "DO", "READ_PROCEDURE", "WRITE_PROCEDURE", 
                      "LITERAL_TRUE", "LITERAL_FALSE", "ASSIGNMENT", "SUM", 
                      "SUB", "MUL", "DIV", "INT_DIV", "OR", "AND", "NOT", 
                      "EQUAL", "NOT_EQUAL", "LESS_THAN", "GREATER_THAN", 
                      "LESS_THAN_OR_EQUAL", "GREATER_THAN_OR_EQUAL", "SEMICOLON", 
                      "COLON", "COMMA", "DOT", "LP", "RP", "LB", "RB", "IDENTIFIER", 
                      "INT", "REAL", "COMMENT", "MULTILINE_COMMENT", "WS", 
                      "INVALID_TOKEN", "INVALID" ]

    RULE_program = 0
    RULE_type = 1
    RULE_block = 2
    RULE_variableDeclarationSection = 3
    RULE_variableDeclaration = 4
    RULE_identifierList = 5
    RULE_subroutineDeclarationSection = 6
    RULE_procedureDeclaration = 7
    RULE_formalParameterList = 8
    RULE_formalParameterSection = 9
    RULE_compoundStatement = 10
    RULE_statement = 11
    RULE_assignmentStatement = 12
    RULE_procedureCallStatement = 13
    RULE_conditionalStatement = 14
    RULE_loopStatement = 15
    RULE_expression = 16
    RULE_relationalOperator = 17
    RULE_simpleExpression = 18
    RULE_simpleExpressionOperator = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_variable = 22
    RULE_expressionList = 23
    RULE_number = 24
    RULE_literal = 25
    RULE_ioProcedureCallStatement = 26

    ruleNames =  [ "program", "type", "block", "variableDeclarationSection", 
                   "variableDeclaration", "identifierList", "subroutineDeclarationSection", 
                   "procedureDeclaration", "formalParameterList", "formalParameterSection", 
                   "compoundStatement", "statement", "assignmentStatement", 
                   "procedureCallStatement", "conditionalStatement", "loopStatement", 
                   "expression", "relationalOperator", "simpleExpression", 
                   "simpleExpressionOperator", "term", "factor", "variable", 
                   "expressionList", "number", "literal", "ioProcedureCallStatement" ]

    EOF = Token.EOF
    PROGRAM=1
    PROCEDURE=2
    VAR=3
    TYPE_INT=4
    TYPE_BOOL=5
    BEGIN=6
    END=7
    IF=8
    THEN=9
    ELSE=10
    WHILE=11
    DO=12
    READ_PROCEDURE=13
    WRITE_PROCEDURE=14
    LITERAL_TRUE=15
    LITERAL_FALSE=16
    ASSIGNMENT=17
    SUM=18
    SUB=19
    MUL=20
    DIV=21
    INT_DIV=22
    OR=23
    AND=24
    NOT=25
    EQUAL=26
    NOT_EQUAL=27
    LESS_THAN=28
    GREATER_THAN=29
    LESS_THAN_OR_EQUAL=30
    GREATER_THAN_OR_EQUAL=31
    SEMICOLON=32
    COLON=33
    COMMA=34
    DOT=35
    LP=36
    RP=37
    LB=38
    RB=39
    IDENTIFIER=40
    INT=41
    REAL=42
    COMMENT=43
    MULTILINE_COMMENT=44
    WS=45
    INVALID_TOKEN=46
    INVALID=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(LALGParser.PROGRAM, 0)

        def IDENTIFIER(self):
            return self.getToken(LALGParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(LALGParser.SEMICOLON, 0)

        def block(self):
            return self.getTypedRuleContext(LALGParser.BlockContext,0)


        def DOT(self):
            return self.getToken(LALGParser.DOT, 0)

        def EOF(self):
            return self.getToken(LALGParser.EOF, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = LALGParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(LALGParser.PROGRAM)
            self.state = 55
            self.match(LALGParser.IDENTIFIER)
            self.state = 56
            self.match(LALGParser.SEMICOLON)
            self.state = 57
            self.block()
            self.state = 58
            self.match(LALGParser.DOT)
            self.state = 59
            self.match(LALGParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE_BOOL(self):
            return self.getToken(LALGParser.TYPE_BOOL, 0)

        def TYPE_INT(self):
            return self.getToken(LALGParser.TYPE_INT, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = LALGParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            _la = self._input.LA(1)
            if not(_la==4 or _la==5):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subroutineDeclarationSection(self):
            return self.getTypedRuleContext(LALGParser.SubroutineDeclarationSectionContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(LALGParser.CompoundStatementContext,0)


        def variableDeclarationSection(self):
            return self.getTypedRuleContext(LALGParser.VariableDeclarationSectionContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = LALGParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4 or _la==5:
                self.state = 63
                self.variableDeclarationSection()


            self.state = 66
            self.subroutineDeclarationSection()
            self.state = 67
            self.compoundStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.VariableDeclarationContext)
            else:
                return self.getTypedRuleContext(LALGParser.VariableDeclarationContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMICOLON)
            else:
                return self.getToken(LALGParser.SEMICOLON, i)

        def getRuleIndex(self):
            return LALGParser.RULE_variableDeclarationSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclarationSection" ):
                listener.enterVariableDeclarationSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclarationSection" ):
                listener.exitVariableDeclarationSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclarationSection" ):
                return visitor.visitVariableDeclarationSection(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclarationSection(self):

        localctx = LALGParser.VariableDeclarationSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableDeclarationSection)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.variableDeclaration()
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 70
                    self.match(LALGParser.SEMICOLON)
                    self.state = 71
                    self.variableDeclaration() 
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 77
            self.match(LALGParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(LALGParser.TypeContext,0)


        def identifierList(self):
            return self.getTypedRuleContext(LALGParser.IdentifierListContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = LALGParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variableDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.type_()
            self.state = 80
            self.identifierList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.IDENTIFIER)
            else:
                return self.getToken(LALGParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.COMMA)
            else:
                return self.getToken(LALGParser.COMMA, i)

        def getRuleIndex(self):
            return LALGParser.RULE_identifierList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierList" ):
                listener.enterIdentifierList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierList" ):
                listener.exitIdentifierList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifierList" ):
                return visitor.visitIdentifierList(self)
            else:
                return visitor.visitChildren(self)




    def identifierList(self):

        localctx = LALGParser.IdentifierListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifierList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(LALGParser.IDENTIFIER)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 83
                self.match(LALGParser.COMMA)
                self.state = 84
                self.match(LALGParser.IDENTIFIER)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubroutineDeclarationSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def procedureDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.ProcedureDeclarationContext)
            else:
                return self.getTypedRuleContext(LALGParser.ProcedureDeclarationContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMICOLON)
            else:
                return self.getToken(LALGParser.SEMICOLON, i)

        def getRuleIndex(self):
            return LALGParser.RULE_subroutineDeclarationSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubroutineDeclarationSection" ):
                listener.enterSubroutineDeclarationSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubroutineDeclarationSection" ):
                listener.exitSubroutineDeclarationSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubroutineDeclarationSection" ):
                return visitor.visitSubroutineDeclarationSection(self)
            else:
                return visitor.visitChildren(self)




    def subroutineDeclarationSection(self):

        localctx = LALGParser.SubroutineDeclarationSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subroutineDeclarationSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 90
                self.procedureDeclaration()
                self.state = 91
                self.match(LALGParser.SEMICOLON)
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROCEDURE(self):
            return self.getToken(LALGParser.PROCEDURE, 0)

        def IDENTIFIER(self):
            return self.getToken(LALGParser.IDENTIFIER, 0)

        def SEMICOLON(self):
            return self.getToken(LALGParser.SEMICOLON, 0)

        def block(self):
            return self.getTypedRuleContext(LALGParser.BlockContext,0)


        def formalParameterList(self):
            return self.getTypedRuleContext(LALGParser.FormalParameterListContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_procedureDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureDeclaration" ):
                listener.enterProcedureDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureDeclaration" ):
                listener.exitProcedureDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureDeclaration" ):
                return visitor.visitProcedureDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def procedureDeclaration(self):

        localctx = LALGParser.ProcedureDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_procedureDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(LALGParser.PROCEDURE)
            self.state = 99
            self.match(LALGParser.IDENTIFIER)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 100
                self.formalParameterList()


            self.state = 103
            self.match(LALGParser.SEMICOLON)
            self.state = 104
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(LALGParser.LP, 0)

        def formalParameterSection(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.FormalParameterSectionContext)
            else:
                return self.getTypedRuleContext(LALGParser.FormalParameterSectionContext,i)


        def RP(self):
            return self.getToken(LALGParser.RP, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMICOLON)
            else:
                return self.getToken(LALGParser.SEMICOLON, i)

        def getRuleIndex(self):
            return LALGParser.RULE_formalParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterList" ):
                listener.enterFormalParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterList" ):
                listener.exitFormalParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameterList" ):
                return visitor.visitFormalParameterList(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterList(self):

        localctx = LALGParser.FormalParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_formalParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LALGParser.LP)
            self.state = 107
            self.formalParameterSection()
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 108
                self.match(LALGParser.SEMICOLON)
                self.state = 109
                self.formalParameterSection()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(LALGParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalParameterSectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(LALGParser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(LALGParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(LALGParser.TypeContext,0)


        def VAR(self):
            return self.getToken(LALGParser.VAR, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_formalParameterSection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormalParameterSection" ):
                listener.enterFormalParameterSection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormalParameterSection" ):
                listener.exitFormalParameterSection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormalParameterSection" ):
                return visitor.visitFormalParameterSection(self)
            else:
                return visitor.visitChildren(self)




    def formalParameterSection(self):

        localctx = LALGParser.FormalParameterSectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_formalParameterSection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 117
                self.match(LALGParser.VAR)


            self.state = 120
            self.identifierList()
            self.state = 121
            self.match(LALGParser.COLON)
            self.state = 122
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(LALGParser.BEGIN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LALGParser.StatementContext)
            else:
                return self.getTypedRuleContext(LALGParser.StatementContext,i)


        def END(self):
            return self.getToken(LALGParser.END, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(LALGParser.SEMICOLON)
            else:
                return self.getToken(LALGParser.SEMICOLON, i)

        def getRuleIndex(self):
            return LALGParser.RULE_compoundStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompoundStatement" ):
                listener.enterCompoundStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompoundStatement" ):
                listener.exitCompoundStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStatement" ):
                return visitor.visitCompoundStatement(self)
            else:
                return visitor.visitChildren(self)




    def compoundStatement(self):

        localctx = LALGParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(LALGParser.BEGIN)
            self.state = 125
            self.statement()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 126
                self.match(LALGParser.SEMICOLON)
                self.state = 127
                self.statement()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 133
            self.match(LALGParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignmentStatement(self):
            return self.getTypedRuleContext(LALGParser.AssignmentStatementContext,0)


        def procedureCallStatement(self):
            return self.getTypedRuleContext(LALGParser.ProcedureCallStatementContext,0)


        def ioProcedureCallStatement(self):
            return self.getTypedRuleContext(LALGParser.IoProcedureCallStatementContext,0)


        def compoundStatement(self):
            return self.getTypedRuleContext(LALGParser.CompoundStatementContext,0)


        def conditionalStatement(self):
            return self.getTypedRuleContext(LALGParser.ConditionalStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(LALGParser.LoopStatementContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = LALGParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.assignmentStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.procedureCallStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.ioProcedureCallStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 138
                self.compoundStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.conditionalStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.loopStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self):
            return self.getTypedRuleContext(LALGParser.VariableContext,0)


        def ASSIGNMENT(self):
            return self.getToken(LALGParser.ASSIGNMENT, 0)

        def expression(self):
            return self.getTypedRuleContext(LALGParser.ExpressionContext,0)


        def getRuleIndex(self):
            return LALGParser.RULE_assignmentStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentStatement" ):
                listener.enterAssignmentStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentStatement" ):
                listener.exitAssignmentStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentStatement" ):
                return visitor.visitAssignmentStatement(self)
            else:
                return visitor.visitChildren(self)




    def assignmentStatement(self):

        localctx = LALGParser.AssignmentStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignmentStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.variable()
            self.state = 144
            self.match(LALGParser.ASSIGNMENT)
            self.state = 145
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedureCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(LALGParser.IDENTIFIER, 0)

        def LP(self):
            return self.getToken(LALGParser.LP, 0)

        def expressionList(self):
            return self.getTypedRuleContext(LALGParser.ExpressionListContext,0)


        def RP(self):
            return self.getToken(LALGParser.RP, 0)

        def getRuleIndex(self):
            return LALGParser.RULE_procedureCallStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcedureCallStatement" ):
                listener.enterProcedureCallStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcedureCallStatement" ):
                listener.exitProcedureCallStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcedureCallStatement" ):
                return visitor.visitProcedureCallStatement(self)
            else:
                return visitor.visitChildren(self)




    def procedureCallStatement(self):
